Updating for Images

--- a/AladdinSane.html
+++ b/AladdinSane.html
@@ -19,7 +19,7 @@
             </nav>
             <div class="content columns padding-vertical">
                 <div class="column column-one">
-                    <img class="header__image" src="images/AladdinSane.jpeg" alt="David Bowie done up as Aladdin Sane">
+                    <img class="header__image" src="AladdinSane.jpeg" alt="David Bowie done up as Aladdin Sane">
                 </div>
                 <div class="column column-two">
                     <h1 class="heading header__heading">Aladdin Sane</h1>
