--- a/HalloweenJack.html
+++ b/HalloweenJack.html
@@ -19,7 +19,7 @@
             </nav>
             <div class="content columns padding-vertical">
                 <div class="column column-one">
-                    <img class="header__image" src="images/HalloweenJack.jpeg" alt="David Bowie dressed as Halloween Jack">
+                    <img class="header__image" src="HalloweenJack.jpeg" alt="David Bowie dressed as Halloween Jack">
                 </div>
                 <div class="column column-two">
                     <h1 class="heading header__heading">Halloween Jack</h1>
