--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </nav>
             <div class="content columns padding-vertical">
                 <div class="column column-one">
-                    <img class="header__image" src="images/Ziggy.jpeg" alt="Bowie performing on stage as Ziggy Stardust">
+                    <img class="header__image" src="Ziggy.jpeg" alt="Bowie performing on stage as Ziggy Stardust">
                 </div>
                 <div class="column column-two">
                     <h1 class="heading header__heading">Ziggy Stardust</h1>
@@ -48,7 +48,7 @@
                         <p>"Ziggy starts to believe in all this  himself and thinks himself a prophet of the future starmen. He takes himself up to the  incredible spiritual heights and is kept alive by his disciples. </p>
                     </div>
                     <div class="column image">
-                        <img src="images/ZiggyLyrics.png" alt="Ziggy Stardust lyrics, handwritten by Bowie">
+                        <img src="ZiggyLyrics.png" alt="Ziggy Stardust lyrics, handwritten by Bowie">
                     </div>
                     <div class="column text-block">
                         <p>When the infinites arrive, they take bits of Ziggy to make themselves real, because in their original state they   are anti-matter and cannot exist on our world. And they tear him to pieces onstage  during the song ‘Rock ‘n’ Roll Suicide.'”</p>
